Added Missing Comments. Moved every class into its own file.

--- a/Console.Core/Console.Core/CommandSystem/Commands/Commands.tt
+++ b/Console.Core/Console.Core/CommandSystem/Commands/Commands.tt
@@ -116,6 +116,7 @@ string[] invokeImpl = new string[CommandCount];
 		
         /// <summary>
         /// Returns the name, plus all the parameter types
+        /// <param name="mode">The ToStringMode</param>
         /// </summary>
         /// <returns>The Full Name including Signature</returns>
 		public override string GetFullName(ToStringMode mode)
